<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmationinput.ConfirmationInputFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/confirm_your_daily_water_intake_objective"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/llContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvWaterIntakeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/intakeSlider"
            app:layout_constraintEnd_toEndOf="@+id/intakeSlider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/intakeSlider"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvWaterIntakeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    tools:text="300 ml" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.slider.Slider
            android:id="@+id/intakeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="5000.0"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toTopOf="@+id/toggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvWaterIntakeValue"
            tools:value="3500" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@id/btnMl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intakeSlider"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btnMl"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_named_unit_ml" />

            <Button
                android:id="@+id/btnOzUk"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_named_unit_oz_uk" />

            <Button
                android:id="@+id/btnOzUs"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_named_unit_oz_us" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>